bug: fix overlap of light mode and menu button on small screens

--- a/src/header.css
+++ b/src/header.css
@@ -97,7 +97,6 @@
 	background: white;
 	width: 100%;
 	height: 20%;
-    left: 0px;
 	transition: .4s .4s top, .4s .4s bottom, .2s transform;
 	border-radius: 100px;
 }
